Fix critical security and ordering issues